# opus_rota3

./: README.md
OPUS-Rota3/: list_caspfm56  rota3.ini  rota3_example.ini
OPUS-Rota3/FASPR/: FASPR  README.txt
OPUS-Rota3/dependency/: hiredis.tar
OPUS-Rota3/oscar/: README  oscar-star
OPUS-Rota3/src/: CMakeLists.txt  DASFScore.cpp  DASFScore.h  LJPotential.cpp  LJPotential.h  MonteCarlo.cpp  MonteCarlo.h  angle.cpp  angle.h  atom.cpp  atom.h  config.cpp  config.h  file.cpp  file.h  geometry.cpp  geometry.h  otherRL.cpp  otherRL.h  pdb.cpp  pdb.h  peptideBuilder.cpp  peptideBuilder.h  potential.cpp  potential.h  redis.cpp  redis.h  residue.cpp  residue.h  rota3.cpp  rota3.ini  rotamerLibScore.cpp  rotamerLibScore.h
OPUS-Rota3/tmp_dir/: T0658-D1.dihedrals  T0658-D1.rota  T0666-D1.dihedrals  T0666-D1.rota  T0684-D2.dihedrals  T0684-D2.rota  T0734-D1.dihedrals  T0734-D1.rota  T0735-D2.dihedrals  T0735-D2.rota  T0737-D1.dihedrals  T0737-D1.rota  T0740-D1.dihedrals  T0740-D1.rota  T0741-D1.dihedrals  T0741-D1.rota  T0771-D1.dihedrals  T0771-D1.rota  T0789-D1.dihedrals  T0789-D1.rota  T0789-D2.dihedrals  T0789-D2.rota  T0790-D1.dihedrals  T0790-D1.rota  T0790-D2.dihedrals  T0790-D2.rota  T0791-D1.dihedrals  T0791-D1.rota  T0791-D2.dihedrals  T0791-D2.rota  T0794-D2.dihedrals  T0794-D2.rota  T0806-D1.dihedrals  T0806-D1.rota  T0810-D1.dihedrals  T0810-D1.rota  T0820-D1.dihedrals  T0820-D1.rota  T0824-D1.dihedrals  T0824-D1.rota  (+74 more)
OPUS-RotaNN/: inference.py  inference_models.py  inference_utils.py  list_caspfm56  my_cnn.py  my_model.py  my_rnn.py  train.py  utils.py
(+21 files in other folders)
